# Verugent

./: .travis.yml  Cargo.toml  License.txt  README.md
examples/: axi.rs  axifull.rs  fifo.rs  func_use.rs  hill_climbing.rs  led.rs  uart.rs
src/: check.rs  fifo.rs  hill_climbing.rs  led.rs  lib.rs  main.rs  uart.rs  vcore.rs
