[package]
name = "verugent"
version = "0.1.3"
authors = ["Mercye"]

license-file = "license.txt"
description = "Rust to Verilog: Hardware Discription DSL library."
repository = "https://github.com/RuSys/Verugent"
readme = "README.md"
keywords = ["verilog", "rust-verilog", "verugent"]

[dependencies]
regex = "*"
ansi_term = "*"
